#84 allow users to add strings to the user angent string sent in requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install tqdm
   - pip install coveralls
   - pip install vcrpy
+  - pip install PyYAML
 
 script:
   - nosetests -v --cover-package=habanero
