--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,6 +8,8 @@ jobs:
     strategy:
       matrix:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -18,7 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: Tests
       run: nosetests -v --cover-package=habanero
     - name: Test coverage
+      if: matrix.python-version == '3.8'
       run: coveralls --verbose
