--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Tests
-      run: nosetests -v --cover-package=habanero
+      run: pytest --cov-report term --cov=habanero
     - name: Test coverage
       if: matrix.python-version == '3.8'
-      run: coveralls --verbose
+      run: codecov
