--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,6 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install habanero
+      run: make
     - name: Tests
       run: pytest --cov-report term --cov=habanero
     - name: Test coverage
