--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9.12, 3.10.4, '3.11.0-rc.2']
+        python-version: [3.6, 3.7, 3.8, 3.9.12, 3.10.9, 3.11.0]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -25,7 +25,7 @@ jobs:
     - name: Tests
       run: pytest
     - name: Test coverage
-      if: matrix.python-version == '3.10.4'
+      if: matrix.python-version == '3.10.9'
       run: |
         python3 -m "pytest" --cov-report=xml --cov=habanero test/
         codecov
