--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,11 +21,11 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install habanero
-      run: make
+      run: python -m pip install .
     - name: Tests
       run: pytest
     - name: Test coverage
       if: matrix.python-version == '3.10.9'
       run: |
-        python3 -m "pytest" --cov-report=xml --cov=habanero test/
+        python -m "pytest" --cov-report=xml --cov=habanero test/
         codecov
