--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,4 @@ ignore = [
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["E402", "F401", "F403"]
 "habanero/request_class.py" = ["E722"]
+"test/*" = ["E501"]
