ignore line too long error for all files in habanero module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,4 @@ ignore = [
 "__init__.py" = ["E402", "F401", "F403"]
 "habanero/request_class.py" = ["E722"]
 "test/*" = ["E501"]
+"habanero/*" = ["E501"]
