--- a/test/cassettes/test-funders/test_funders_filter_fails_noids.yaml
+++ b/test/cassettes/test-funders/test_funders_filter_fails_noids.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/funders?filter=has-assertion%3Atrue
   response:
@@ -29,16 +29,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '253'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Thu, 28 Oct 2021 15:54:03 GMT
+      - Mon, 13 Feb 2023 14:50:34 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
