--- a/test/cassettes/test-journals/test_journals_bad_id_warn.yaml
+++ b/test/cassettes/test-journals/test_journals_bad_id_warn.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/journals/4444-4444
   response:
@@ -27,16 +27,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '19'
       content-type:
       - application/json
       date:
-      - Fri, 12 Nov 2021 00:30:47 GMT
+      - Mon, 13 Feb 2023 15:00:43 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       x-api-pool:
       - public
       x-rate-limit-interval:
