--- a/test/cassettes/test-licenses/test_licenses.yaml
+++ b/test/cassettes/test-licenses/test_licenses.yaml
@@ -9,15 +9,14 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/licenses?rows=2
   response:
     body:
-      string: '{"status":"ok","message-type":"license-list","message-version":"1.0.0","message":{"total-results":8087,"items":[{"URL":"Http:\/\/creativecommons.org\/license\/by-nc\/4.0.","work-count":100},{"URL":"http:\/\/
-        creativecommons.org\/licenses\/by-nc-nd\/4.0\/","work-count":11}]}}'
+      string: '{"status":"ok","message-type":"license-list","message-version":"1.0.0","message":{"total-results":12204,"items":[{"URL":"Http:\/\/creativecommons.org\/license\/by-nc\/4.0.","work-count":100},{"URL":"Http:\/\/creativecommons.org\/licenses\/by-nc\/4.0","work-count":1}]}}'
     headers:
       access-control-allow-headers:
       - X-Requested-With, Accept, Accept-Encoding, Accept-Charset, Accept-Language,
@@ -28,16 +27,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '275'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Thu, 28 Oct 2021 15:54:29 GMT
+      - Mon, 13 Feb 2023 15:02:06 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
