--- a/test/cassettes/test-members/test_members_filter.yaml
+++ b/test/cassettes/test-members/test_members_filter.yaml
@@ -9,17 +9,16 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/members?filter=has-full-text%3Atrue
   response:
     body:
       string: '{"status":"failed","message-type":"validation-failure","message":[{"type":"filter-not-available","value":"has-full-text","message":"Filter
         has-full-text specified but there is no such filter for this route. Valid
-        filters for this route are: prefix, has-public-references, reference-visibility,
-        backfile-doi-count, current-doi-count"}]}'
+        filters for this route are: prefix, backfile-doi-count, current-doi-count"}]}'
     headers:
       access-control-allow-headers:
       - X-Requested-With, Accept, Accept-Encoding, Accept-Charset, Accept-Language,
@@ -30,16 +29,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '335'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Thu, 28 Oct 2021 15:54:36 GMT
+      - Mon, 13 Feb 2023 14:49:58 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
