--- a/test/cassettes/test-members/test_members_sample_err.yaml
+++ b/test/cassettes/test-members/test_members_sample_err.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/members?sample=2
   response:
@@ -28,16 +28,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '164'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Thu, 28 Oct 2021 15:54:35 GMT
+      - Mon, 13 Feb 2023 14:49:57 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
