--- a/test/cassettes/test-pagination_params/test_limit_of_zero_without_id.yaml
+++ b/test/cassettes/test-pagination_params/test_limit_of_zero_without_id.yaml
@@ -9,14 +9,14 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/members?rows=0
   response:
     body:
-      string: '{"status":"ok","message-type":"member-list","message-version":"1.0.0","message":{"items-per-page":0,"query":{"start-index":0,"search-terms":null},"total-results":20441,"items":[]}}'
+      string: '{"status":"ok","message-type":"member-list","message-version":"1.0.0","message":{"items-per-page":0,"query":{"start-index":0,"search-terms":null},"total-results":23549,"items":[]}}'
     headers:
       access-control-allow-headers:
       - X-Requested-With, Accept, Accept-Encoding, Accept-Charset, Accept-Language,
@@ -27,16 +27,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '180'
       content-type:
       - application/json
       date:
-      - Thu, 28 Oct 2021 15:54:39 GMT
+      - Mon, 13 Feb 2023 15:05:30 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       x-api-pool:
       - public
       x-rate-limit-interval:
