--- a/test/cassettes/test-prefixes/test_prefixes_filter.yaml
+++ b/test/cassettes/test-prefixes/test_prefixes_filter.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/prefixes?filter=has-full-text%3Atrue
   response:
@@ -28,16 +28,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '105'
       content-type:
       - application/json
       date:
-      - Thu, 28 Oct 2021 15:54:43 GMT
+      - Mon, 13 Feb 2023 15:33:10 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       x-api-pool:
       - public
       x-rate-limit-interval:
