--- a/test/cassettes/test-settings/test_ua_string_registration_agency.yaml
+++ b/test/cassettes/test-settings/test_ua_string_registration_agency.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6 foo bar
+      - python-requests/2.28.1 habanero/1.2.4 foo bar
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6 foo bar
+      - python-requests/2.28.1 habanero/1.2.4 foo bar
     method: GET
     uri: https://api.crossref.org/works/10.1126/science.169.3946.635/agency
   response:
@@ -27,16 +27,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '166'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Thu, 28 Oct 2021 15:55:23 GMT
+      - Mon, 13 Feb 2023 21:12:01 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
