--- a/test/cassettes/test-types/test_types_query_filters_not_allowed_with_typeid.yaml
+++ b/test/cassettes/test-types/test_types_query_filters_not_allowed_with_typeid.yaml
@@ -9,9 +9,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
       X-USER-AGENT:
-      - python-requests/2.25.1 habanero/0.7.6
+      - python-requests/2.28.1 habanero/1.2.4
     method: GET
     uri: https://api.crossref.org/types/journal-article?query.bibliographic=gender
   response:
@@ -28,16 +28,16 @@ interactions:
       - Link
       connection:
       - close
-      content-length:
-      - '181'
       content-type:
       - application/json;charset=utf-8
       date:
-      - Fri, 12 Nov 2021 04:16:49 GMT
+      - Mon, 13 Feb 2023 21:19:19 GMT
       permissions-policy:
       - interest-cohort=()
       server:
       - Jetty(9.4.40.v20210413)
+      transfer-encoding:
+      - chunked
       vary:
       - Accept
       x-api-pool:
