--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.7.15, 3.8.15, 3.9.16, 3.10.9, 3.11.1]
+        python-version: [3.7.15, 3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.4]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
