--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,10 +4,10 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [3.7.15, 3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.4]
+        python-version: [3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.4]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -25,7 +25,7 @@ jobs:
     - name: Tests
       run: pytest
     - name: Test coverage
-      if: matrix.python-version == '3.11.1'
+      if: matrix.python-version == '3.11.4'
       run: |
         python -m "pytest" --cov-report=xml --cov=habanero test/
         codecov
