--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -4,14 +4,14 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.4]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3.5.2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
