--- a/test/cassettes/test-pagination_params/test_limit_of_zero_with_id.yaml
+++ b/test/cassettes/test-pagination_params/test_limit_of_zero_with_id.yaml
@@ -9,14 +9,14 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.28.1 habanero/1.2.4
+      - python-requests/2.31.0 habanero/1.2.5
       X-USER-AGENT:
-      - python-requests/2.28.1 habanero/1.2.4
+      - python-requests/2.31.0 habanero/1.2.5
     method: GET
     uri: https://api.crossref.org/members/2984/works?rows=0&facet=issn%3A%2A
   response:
     body:
-      string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{"issn":{"value-count":7,"values":{"http:\/\/id.crossref.org\/issn\/1091-3297":270,"http:\/\/id.crossref.org\/issn\/2193-5505":86,"http:\/\/id.crossref.org\/issn\/2191-7442":86,"http:\/\/id.crossref.org\/issn\/1360-466X":33,"http:\/\/id.crossref.org\/issn\/1354-3628":20,"http:\/\/id.crossref.org\/issn\/0849-6757":7,"http:\/\/id.crossref.org\/issn\/2048-2604":2}}},"total-results":353503,"items":[],"items-per-page":0,"query":{"start-index":0,"search-terms":null}}}'
+      string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{"issn":{"value-count":8,"values":{"http:\/\/id.crossref.org\/issn\/1091-3297":270,"http:\/\/id.crossref.org\/issn\/2193-5505":86,"http:\/\/id.crossref.org\/issn\/2191-7442":86,"http:\/\/id.crossref.org\/issn\/1360-466X":45,"http:\/\/id.crossref.org\/issn\/1354-3628":20,"http:\/\/id.crossref.org\/issn\/0849-6757":7,"http:\/\/id.crossref.org\/issn\/1460-3349":2,"http:\/\/id.crossref.org\/issn\/2048-2604":1}}},"total-results":385084,"items":[],"items-per-page":0,"query":{"start-index":0,"search-terms":null}}}'
     headers:
       access-control-allow-headers:
       - X-Requested-With, Accept, Accept-Encoding, Accept-Charset, Accept-Language,
@@ -30,7 +30,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 13 Feb 2023 15:05:28 GMT
+      - Mon, 25 Sep 2023 04:27:50 GMT
       permissions-policy:
       - interest-cohort=()
       server:
