--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install habanero
       run: python -m pip install .
     - name: Tests
-      if: contains(matrix.python-version, [3.10.9, 3.11.1, 3.11.5])
+      if: contains([3.10.9, 3.11.1, 3.11.5], matrix.python-version)
       run: pytest
     - name: Test coverage
       if: matrix.python-version == '3.11.4'
