--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Install habanero
       run: python -m pip install .
     - name: Tests
-      if: contains([3.10.9, 3.11.1, 3.11.5], matrix.python-version)
+      if: contains(fromJSON('["3.10.9", "3.11.1", "3.11.5"]'), matrix.python-version)
       run: pytest
     - name: Test coverage
-      if: matrix.python-version == '3.11.4'
+      if: matrix.python-version == '3.11.5'
       run: |
         python -m "pytest" --cov-report=xml --cov=habanero test/
         codecov
