--- a/test/cassettes/test-pagination_params/test_limit_of_zero_with_id.yaml
+++ b/test/cassettes/test-pagination_params/test_limit_of_zero_with_id.yaml
@@ -16,7 +16,7 @@ interactions:
     uri: https://api.crossref.org/members/2984/works?rows=0&facet=issn%3A%2A
   response:
     body:
-      string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{"issn":{"value-count":8,"values":{"http:\/\/id.crossref.org\/issn\/1091-3297":270,"http:\/\/id.crossref.org\/issn\/2193-5505":86,"http:\/\/id.crossref.org\/issn\/2191-7442":86,"http:\/\/id.crossref.org\/issn\/1360-466X":45,"http:\/\/id.crossref.org\/issn\/1354-3628":20,"http:\/\/id.crossref.org\/issn\/0849-6757":7,"http:\/\/id.crossref.org\/issn\/1460-3349":2,"http:\/\/id.crossref.org\/issn\/2048-2604":1}}},"total-results":385084,"items":[],"items-per-page":0,"query":{"start-index":0,"search-terms":null}}}'
+      string: '{"status":"ok","message-type":"work-list","message-version":"1.0.0","message":{"facets":{"issn":{"value-count":12,"values":{"http:\/\/id.crossref.org\/issn\/1091-3297":270,"http:\/\/id.crossref.org\/issn\/2193-5505":86,"http:\/\/id.crossref.org\/issn\/2191-7442":86,"http:\/\/id.crossref.org\/issn\/1360-466X":45,"http:\/\/id.crossref.org\/issn\/1354-3628":20,"http:\/\/id.crossref.org\/issn\/0849-6757":7,"http:\/\/id.crossref.org\/issn\/1460-3349":2,"http:\/\/id.crossref.org\/issn\/2048-2604":1,"http:\/\/id.crossref.org\/issn\/1746-7632":1,"http:\/\/id.crossref.org\/issn\/1746-7616":1,"http:\/\/id.crossref.org\/issn\/1746-6709":1,"http:\/\/id.crossref.org\/issn\/0962-2624":1}}},"total-results":415728,"items":[],"items-per-page":0,"query":{"start-index":0,"search-terms":null}}}'
     headers:
       access-control-allow-headers:
       - X-Requested-With, Accept, Accept-Encoding, Accept-Charset, Accept-Language,
@@ -30,7 +30,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 25 Sep 2023 04:27:50 GMT
+      - Mon, 15 Jan 2024 19:55:15 GMT
       permissions-policy:
       - interest-cohort=()
       server:
