--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.5]
+        python-version: [3.8.15, 3.9.16, 3.10.9, 3.11.1, 3.11.5, 3.12]
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -23,7 +23,7 @@ jobs:
     - name: Install habanero
       run: python -m pip install .
     - name: Tests
-      if: contains(fromJSON('["3.10.9", "3.11.1", "3.11.5"]'), matrix.python-version)
+      if: contains(fromJSON('["3.10.9", "3.11.1", "3.11.5", "3.12"]'), matrix.python-version)
       run: pytest
     - name: Test coverage
       if: matrix.python-version == '3.11.5'
