add python3.12 classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 project_urls = 
     Documentation = http://habanero.rtfd.org/
     Source = https://github.com/sckott/habanero
