--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ exclude = [
 	"dist"
 ]
 
-ignore = [
+lint.ignore = [
     "D102",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402", "F401", "F403"]
 "habanero/request_class.py" = ["E722"]
 "test/*" = ["E501"]
